feat: сортировка сообщений по дате

--- a/src/app/common-ui/avatar-circle/avatar-circle.component.html
+++ b/src/app/common-ui/avatar-circle/avatar-circle.component.html
@@ -1,6 +1,6 @@
-@if (avatatUrl(); as avatatUrl) {
-  @if (avatatUrl) {
-    <img [src]="avatatUrl | imgUrl">
+@if (avatarUrl(); as avatarUrl) {
+  @if (avatarUrl) {
+    <img [src]="avatarUrl | imgUrl">
   } @else {
     <img src="/assets/imgs/avatar-null.png">
   }
