--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-header/chat-workspace-header.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-header/chat-workspace-header.component.html
@@ -1,7 +1,7 @@
 @if (profile(); as profile) {
   <div class="companion-wrapper">
     <app-avatar-circle
-      [avatatUrl]="profile.avatarUrl"
+      [avatarUrl]="profile.avatarUrl"
       class="size32"
     ></app-avatar-circle>
     <div class="subtitle"> {{ profile.firstName }} {{ profile.lastName }}</div>
