--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.scss
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.scss
@@ -1,7 +1,13 @@
 :host {
   display: grid;
-  grid-template-columns: 32px 1fr;
+  //grid-template-columns: 32px 1fr;
   grid-gap: 12px;
+
+  .message-day {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
 
   .message-container {
     order: 0;
@@ -19,7 +25,7 @@
   }
 }
 
-:host.is-mine {
+.is-mine {
   grid-template-columns: 1fr min-content;
   justify-self: end;
 
