--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
@@ -1,7 +1,7 @@
 <div class="messages-wrapper">
-  @for (message of messages(); track message.id) {
+  @for (dailyMessage of dailyMessages(); track dailyMessage.date) {
     <app-chat-workspace-message
-      [message]="message"
+      [dailyMessage]="dailyMessage"
     ></app-chat-workspace-message>
   }
 </div>
