--- a/src/app/pages/profile-page/post-input/post-input.component.html
+++ b/src/app/pages/profile-page/post-input/post-input.component.html
@@ -1,7 +1,7 @@
 @if (profile(); as profile) {
   <app-avatar-circle
     class="size32"
-    [avatatUrl]="profile.avatarUrl"
+    [avatarUrl]="profile.avatarUrl"
   ></app-avatar-circle>
 }
 
