--- a/src/app/pages/profile/post/comment/comment.component.html
+++ b/src/app/pages/profile/post/comment/comment.component.html
@@ -1,7 +1,7 @@
 @if (comment(); as comment) {
   <app-avatar-circle
     class="size32"
-   [avatatUrl]="comment.author.avatarUrl"
+   [avatarUrl]="comment.author.avatarUrl"
   >
   </app-avatar-circle>
 
