--- a/src/app/common-ui/profile-header/profile-header.component.html
+++ b/src/app/common-ui/profile-header/profile-header.component.html
@@ -1,5 +1,5 @@
 @if (profile(); as profile) {
-  <app-avatar-circle [avatatUrl]="profile.avatarUrl ?? null"></app-avatar-circle>
+  <app-avatar-circle [avatarUrl]="profile.avatarUrl ?? null"></app-avatar-circle>
 
   <div class="username-and-name">
     <h1 class="h4 mb4">{{ profile.firstName }} {{ profile.lastName }}</h1>
