--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.html
@@ -1,16 +1,17 @@
-@if (message(); as message) {
-  <div>тут какая-то дата</div>
-  <app-avatar-circle
-    class="size32"
-    [avatatUrl]="message.user?.avatarUrl"
-  ></app-avatar-circle>
-
-  <div class="message-container">
-    <strong class="medium-text mb8">
-      {{ message.user?.firstName }} {{ message.user?.lastName }} {{ message.createdAt | date: 'HH:mm' }}
-    </strong>
-    <div class="message-text medium-text">
-      {{ message.text }}
-    </div>
-  </div>
+@if (dailyMessage(); as messages) {
+    <div class="message-day"> {{ messages.date | date: 'dd-MM-yyyy' }} </div>
+    @for (message of messages.messages; track message.id) {
+        <div [ngClass]="{'is-mine': message.isMine, 'message-container': !message.isMine}">
+            <app-avatar-circle
+                    class="size32"
+                    [avatarUrl]="message.user?.avatarUrl"
+            ></app-avatar-circle>
+            <strong class="medium-text mb8">
+                {{ message.user?.firstName }} {{ message.user?.lastName }} {{ message.createdAt | date: 'HH:mm' }}
+            </strong>
+            <div class="message-text medium-text">
+                {{ message.text }}
+            </div>
+        </div>
+    }
 }
