--- a/src/app/pages/chats-page/chats-btn/chats-btn.component.html
+++ b/src/app/pages/chats-page/chats-btn/chats-btn.component.html
@@ -1,7 +1,7 @@
 @if (chat(); as chat) {
   <app-avatar-circle
     class="size32"
-    [avatatUrl]="chat.userFrom.avatarUrl"
+    [avatarUrl]="chat.userFrom.avatarUrl"
   ></app-avatar-circle>
 
   <div class="last-message__wrapper">
