--- a/src/app/pages/profile-page/post/post.component.html
+++ b/src/app/pages/profile-page/post/post.component.html
@@ -1,7 +1,7 @@
 @if (post(); as post) {
   <app-avatar-circle
     class="size32"
-    [avatatUrl]="post.author.avatarUrl"
+    [avatarUrl]="post.author.avatarUrl"
   >
   </app-avatar-circle>
 
