fix: исправлена отображение при переключении сообщений

--- a/src/app/pages/chats-page/chats-list/chats-list.component.html
+++ b/src/app/pages/chats-page/chats-list/chats-list.component.html
@@ -11,7 +11,7 @@
     chats
     [chat]="chat"
     [routerLink]="[chat.id]"
-    routerLinkActive="active"
+    [routerLinkActive]="'active'"
   ></button>
 }
 
