--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
@@ -1,5 +1,6 @@
 <div class="messages-wrapper">
   @for (dailyMessage of dailyMessages(); track dailyMessage.date) {
+      <div class="message-day">{{ dailyMessage.date | date: 'dd-MM-yyyy' }}</div>
     <app-chat-workspace-message
       [dailyMessage]="dailyMessage"
     ></app-chat-workspace-message>
