--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.scss
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.scss
@@ -8,6 +8,13 @@
 .messages-wrapper {
   display: grid;
   grid-gap: 12px;
+
+  .message-day {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+
 }
 
 .message-input {
