--- a/src/app/pages/chats-page/chat-workspace/chat-workspace.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace.component.html
@@ -1,4 +1,4 @@
-@if (activeChat$ | async; as chat) {
+@if (activeChat(); as chat) {
     <app-chat-workspace-header
             [profile]="chat.companion"
     ></app-chat-workspace-header>
