--- a/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.html
+++ b/src/app/pages/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-message/chat-workspace-message.component.html
@@ -1,5 +1,5 @@
-@if (dailyMessage(); as messages) {
-    @for (message of messages.messages; track message.id) {
+@if (dailyMessage().messages; as messages) {
+    @for (message of messages; track message.id) {
         <div [ngClass]="{'is-mine': message.isMine, 'message-container': !message.isMine}">
             <app-avatar-circle
                     class="size32"
