feat: создан компонент с тестовой формой

--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -32,6 +32,10 @@
   <svg icon="arrow" class="to-subscribers-icon"></svg>
 </div>
 
+<div [routerLink]="['experiment']" class="experiment">
+    Эксперимент
+</div>
+
 <footer class="sidebar__footer">
   @if (me(); as me) {
     @if (me.avatarUrl) {
