--- a/src/app/common-ui/sidebar/sidebar.component.scss
+++ b/src/app/common-ui/sidebar/sidebar.component.scss
@@ -86,6 +86,17 @@
   }
 }
 
+.experiment {
+  cursor: pointer;
+  padding: 16px;
+  display: grid;
+  color: var(--dark-hover-color);
+
+  &:hover {
+    color: var(--light-color);
+  }
+}
+
 .settings-button {
   svg {
     width: 13px;
