--- a/apps/tik-talk/src/styles.scss
+++ b/apps/tik-talk/src/styles.scss
@@ -18,7 +18,7 @@ body {
   font-family: 'JetBrains Mono', monospace;
   background: var(--dark-color);
   color: var(--light-color);
-  background-image: url('//assets/imgs/background.png');
+  background-image: url('/assets/imgs/background.png');
   background-size: cover;
 }
 
