--- a/libs/chats/src/lib/feature-chats-workspace/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
+++ b/libs/chats/src/lib/feature-chats-workspace/chats-page/chat-workspace/chat-workspace-messages-wrapper/chat-workspace-messages-wrapper.component.html
@@ -1,5 +1,5 @@
 <div class="messages-wrapper">
-  @for (dailyMessage of chat().messages; track dailyMessage.date) {
+  @for (dailyMessage of dailyMessages(); track dailyMessage.date) {
   <div class="message-day">{{ dailyMessage.date | date : 'dd-MM-yyyy' }}</div>
   <app-chat-workspace-message
     [dailyMessage]="dailyMessage"
