--- a/libs/layout/src/lib/sidebar/sidebar.component.html
+++ b/libs/layout/src/lib/sidebar/sidebar.component.html
@@ -7,6 +7,9 @@
       <a class="menu-item" [routerLink]="[item.link]" routerLinkActive="active">
         <svg [icon]="item.icon"></svg>
         <span> {{ item.label }} </span>
+        @if(item.link === 'chats' && unreadMessage()>0) {
+          <span> {{ unreadMessage() }} </span>
+        }
       </a>
     </li>
     }
