--- a/libs/layout/src/lib/sidebar/sidebar.component.html
+++ b/libs/layout/src/lib/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
       <a class="menu-item" [routerLink]="[item.link]" routerLinkActive="active">
         <svg [icon]="item.icon"></svg>
         <span> {{ item.label }} </span>
-        @if(item.link === 'chats' && unreadMessage()>0) {
-          <span> {{ unreadMessage() }} </span>
+        @if(item.link === 'chats' && unreadMessages() > 0) {
+          <span> {{ unreadMessages() }} </span>
         }
       </a>
     </li>
