fix: исправлена верстка сайдбара

--- a/libs/layout/src/lib/sidebar/sidebar.component.scss
+++ b/libs/layout/src/lib/sidebar/sidebar.component.scss
@@ -3,113 +3,126 @@
   padding: 20px 12px;
   position: relative;
   background: var(--dark-grey);
-}
-
-.main-menu-list {
-  display: grid;
-  grid-gap: 8px;
-  list-style: none;
-}
-
-.menu-item {
-  display: grid;
-  grid-gap: 12px;
-  padding: 16px 12px;
-  cursor: pointer;
-  border: none;
-  background: none;
-  color: var(--light-color);
-  grid-template-columns: 16px 1fr max-content;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 24px;
-  align-items: center;
   width: 100%;
-  text-align: left;
-  border-radius: 2px;
-  text-decoration: none;
 
-  &.active,
-  &:hover,
-  &:focus-visible {
-    background-color: var(--dark-hover-color);
-    color: var(--primary-color);
+  .main-menu-container {
+    position: fixed;
+
+    .main-menu-list {
+      display: grid;
+      grid-gap: 8px;
+      list-style: none;
+    }
+
+    .menu-item {
+      display: grid;
+      grid-gap: 12px;
+      padding: 16px 12px;
+      cursor: pointer;
+      border: none;
+      background: none;
+      color: var(--light-color);
+      grid-template-columns: 16px 1fr max-content;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 24px;
+      align-items: center;
+      text-align: left;
+      border-radius: 2px;
+      text-decoration: none;
+
+      .unread-message {
+        width: 26px;
+        height: 18px;
+        text-align: center;
+        line-height: 18px;
+        background-color: var(--dark-hover-color);
+        color: var(--light-color);
+        border-radius: 2px;
+
+        &.active,
+        &:hover,
+        &:focus-visible
+        {
+          background-color: var(--primary-color);
+          color: var(--dark-color);
+        }
+      }
+
+      &.active,
+      &:hover,
+      &:hover .unread-message,
+      &:focus-visible {
+        background-color: var(--dark-hover-color);
+        color: var(--primary-color);
+
+        .menu-item svg {
+          color: var(--primary-color);
+        }
+      }
+    }
 
     .menu-item svg {
+      width: 16px;
+      height: 16px;
+    }
+
+    .to-subscribers {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .to-subscribers-link {
       color: var(--primary-color);
+      text-decoration: none;
+    }
+
+    .to-subscribers-icon {
+      width: 18px;
+      height: 18px;
+    }
+
+
+    .experiment {
+      cursor: pointer;
+      padding: 16px;
+      display: grid;
+      color: var(--dark-hover-color);
+
+      &:hover {
+        color: var(--light-color);
+      }
     }
   }
 
-  .unread-message {
-    width: 26px;
-    height: 18px;
-    text-align: center;
-    line-height: 18px;
-    background: var(--primary-color);
-    color: var(--dark-color);
+  .sidebar__footer {
+    background-color: var(--dark-hover-color);
     border-radius: 2px;
-  }
-}
+    padding: 4px 16px;
+    display: grid;
+    grid-template-columns: 32px 1fr 16px;
+    grid-gap: 12px;
+    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    img {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+    }
 
-.menu-item svg {
-  width: 16px;
-  height: 16px;
-}
+    .username-text {
+      color: var(--primary-color);
+      font-weight: 700;
+    }
 
-.to-subscribers {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-.to-subscribers-link {
-  color: var(--primary-color);
-  text-decoration: none;
-}
-
-.to-subscribers-icon {
-  width: 18px;
-  height: 18px;
-}
-
-.sidebar__footer {
-  background-color: var(--dark-hover-color);
-  border-radius: 2px;
-  padding: 4px 16px;
-  display: grid;
-  grid-template-columns: 32px 1fr 16px;
-  grid-gap: 12px;
-  align-items: center;
-  position: absolute;
-  bottom: 20px;
-  width: calc(100% - 20px);
-  img {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-  }
-
-  .username-text {
-    color: var(--primary-color);
-    font-weight: 700;
-  }
-}
-
-.experiment {
-  cursor: pointer;
-  padding: 16px;
-  display: grid;
-  color: var(--dark-hover-color);
-
-  &:hover {
-    color: var(--light-color);
-  }
-}
-
-.settings-button {
-  svg {
-    width: 13px;
-    height: 13px;
-    color: var(--primary-color);
+    .settings-button {
+      svg {
+        width: 13px;
+        height: 13px;
+        color: var(--primary-color);
+      }
+    }
   }
 }
