--- a/libs/layout/src/lib/sidebar/sidebar.component.html
+++ b/libs/layout/src/lib/sidebar/sidebar.component.html
@@ -1,49 +1,52 @@
-<img class="ml16 mb20" src="/assets/svg/logo-small.svg" alt="" />
+<div class="main-menu-container">
+  <img class="ml16 mb20" src="/assets/svg/logo-small.svg" alt="" />
 
-<nav>
-  <ul class="main-menu-list">
-    @for (item of menuItems; track item) {
-    <li>
-      <a class="menu-item" [routerLink]="[item.link]" routerLinkActive="active">
-        <svg [icon]="item.icon"></svg>
-        <span> {{ item.label }} </span>
-        @if(item.link === 'chats' && unreadMessages() > 0) {
-          <span class="unread-message"> {{ unreadMessages() }} </span>
-        }
-      </a>
-    </li>
-    }
-  </ul>
-</nav>
+  <nav>
+    <ul class="main-menu-list">
+      @for (item of menuItems; track item) {
+        <li>
+          <a class="menu-item" [routerLink]="[item.link]" routerLinkActive="active">
+            <svg [icon]="item.icon"></svg>
+            <span> {{ item.label }} </span>
+            @if (item.link === 'chats' && unreadMessages() > 0) {
+              <span class="unread-message" routerLinkActive="active"> {{ unreadMessages() }} </span>
+            }
+          </a>
+        </li>
+      }
+    </ul>
+  </nav>
 
-<p class="medium-text mb20">Подписчики</p>
+  <p class="medium-text mb20 mt20 pl14">Подписчики</p>
 
-@for (profile of subscribers$ | async; track profile.id) {
-<app-subscriber-card [profile]="profile"></app-subscriber-card>
-}
-
-<div class="mt20 to-subscribers">
-  <a [routerLink]="['/subscribers']" class="to-subscribers-link medium-text"
-    >Все подписчики</a
-  >
-  <svg icon="arrow" class="to-subscribers-icon"></svg>
-</div>
-
-<div [routerLink]="['experiment']" class="experiment">Эксперимент</div>
-
-<footer class="sidebar__footer">
-  @if (me(); as me) { @if (me.avatarUrl) {
-  <img [src]="me.avatarUrl | imgUrl" />
-  } @else {
-  <img src="/assets/imgs/avatar-null.png" />
+  @for (profile of subscribers$ | async; track profile.id) {
+    <app-subscriber-card [profile]="profile"></app-subscriber-card>
   }
 
-  <div class="medium-text username-text">
-    {{ me.username }}
+  <div class="mt20 pl14 to-subscribers">
+    <a [routerLink]="['/subscribers']" class="to-subscribers-link medium-text"
+    >Все подписчики</a
+    >
+    <svg icon="arrow" class="to-subscribers-icon"></svg>
   </div>
 
-  <a [routerLink]="['settings']" class="settings-button">
-    <svg icon="settings"></svg>
-  </a>
+  <div [routerLink]="['experiment']" class="experiment">Эксперимент</div>
+</div>
+
+<footer class="sidebar__footer">
+  @if (me(); as me) {
+    @if (me.avatarUrl) {
+      <img [src]="me.avatarUrl | imgUrl" />
+    } @else {
+      <img src="/assets/imgs/avatar-null.png" />
+    }
+
+    <div class="medium-text username-text">
+      {{ me.username }}
+    </div>
+
+    <a [routerLink]="['settings']" class="settings-button">
+      <svg icon="settings"></svg>
+    </a>
   }
 </footer>
