--- a/libs/layout/src/lib/sidebar/sidebar.component.scss
+++ b/libs/layout/src/lib/sidebar/sidebar.component.scss
@@ -51,7 +51,6 @@
 
       &.active,
       &:hover,
-      &:hover .unread-message,
       &:focus-visible {
         background-color: var(--dark-hover-color);
         color: var(--primary-color);
@@ -59,6 +58,11 @@
         .menu-item svg {
           color: var(--primary-color);
         }
+      }
+
+      &:hover .unread-message {
+        background-color: var(--primary-color);
+        color: var(--dark-color);
       }
     }
 
