fix: исправлена верстка списка чатов

--- a/libs/chats/src/lib/feature-chats-workspace/chats-page/chats-btn/chats-btn.component.scss
+++ b/libs/chats/src/lib/feature-chats-workspace/chats-page/chats-btn/chats-btn.component.scss
@@ -15,6 +15,10 @@
   background: var(--dark-active-color);
 }
 
+:host.active .chat-user {
+  color: var(--primary-color);
+}
+
 .last-message__wrapper {
   display: flex;
   flex-direction: column;
