refactor: перенос в data-access

--- a/libs/data-access/src/lib/components/avatar-circle/avatar-circle.component.html
+++ b/libs/data-access/src/lib/components/avatar-circle/avatar-circle.component.html
@@ -1,5 +1,7 @@
-@if (avatarUrl(); as avatarUrl) { @if (avatarUrl) {
-<img [src]="avatarUrl | imgUrl" />
-} @else {
-<img src="/assets/imgs/avatar-null.png" />
-} }
+@if (avatarUrl(); as avatarUrl) {
+  @if (avatarUrl) {
+    <img [src]="avatarUrl | imgUrl" />
+  } @else {
+    <img src="/assets/imgs/avatar-null.png" />
+  }
+}
