--- a/libs/profile/src/lib/feature-profile-list/profile-filters/profile-filters.component.scss
+++ b/libs/profile/src/lib/feature-profile-list/profile-filters/profile-filters.component.scss
@@ -1,4 +1,5 @@
 .profile-search-form {
+  position: sticky;
   padding: 16px 20px;
   background: var(--dark-color);
   border: 1px solid var(--light-color);
@@ -6,3 +7,5 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
   grid-gap: 40px;
 }
+
+
