--- a/libs/profile/src/lib/feature-profile-list/search-page/search-page.component.html
+++ b/libs/profile/src/lib/feature-profile-list/search-page/search-page.component.html
@@ -1,6 +1,3 @@
- <app-profile-filters> </app-profile-filters>
-<div class="profile-card__wrapper">
-  @for (profile of profiles(); track profile.id) {
-  <app-profile-card [profile]="profile"></app-profile-card>
-  }
-</div>
+<app-profile-filters></app-profile-filters>
+
+<tt-profile-card-container></tt-profile-card-container>
