--- a/libs/profile/src/lib/feature-profile-list/profile-card-container/profile-card-container.component.scss
+++ b/libs/profile/src/lib/feature-profile-list/profile-card-container/profile-card-container.component.scss
@@ -2,8 +2,7 @@
   display: grid;
   grid-gap: 8px;
   padding-top: 20px;
-  overflow-y: scroll;
-  position: relative;
+  overflow: scroll;
 
   &::-webkit-scrollbar {
     width: 0;
