--- a/libs/profile/src/lib/feature-profile-list/profile-filters/profile-filters.component.scss
+++ b/libs/profile/src/lib/feature-profile-list/profile-filters/profile-filters.component.scss
@@ -1,11 +1,18 @@
-.profile-search-form {
+:host {
   position: sticky;
-  padding: 16px 20px;
-  background: var(--dark-color);
-  border: 1px solid var(--light-color);
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
-  grid-gap: 40px;
+  top: 10px;
+  z-index: 1000;
+
+  .profile-search-form {
+    padding: 16px 20px;
+    background: var(--dark-color);
+    border: 1px solid var(--light-color);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+    grid-gap: 40px;
+  }
 }
+
+
 
 
