--- a/libs/auth/src/lib/feature-login/login-page/login-page.component.html
+++ b/libs/auth/src/lib/feature-login/login-page/login-page.component.html
@@ -1,15 +1,23 @@
 <form class="login-form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <h1 class="h1 mb60">Вход</h1>
 
-  <label class="tt-control-label mb16">
+  <tt-input
+    type="text"
+    placeholder="Введите логин"
+    formControlName="username"
+  >
     Telegram username
-    <input
-      formControlName="username"
-      class="tt-input"
-      type="text"
-      placeholder="Введите логин"
-    />
-  </label>
+  </tt-input>
+
+<!--  <label class="tt-control-label mb16">-->
+<!--    Telegram username-->
+<!--    <input-->
+<!--      formControlName="username"-->
+<!--      class="tt-input"-->
+<!--      type="text"-->
+<!--      placeholder="Введите логин"-->
+<!--    />-->
+<!--  </label>-->
 
   <label class="tt-control-label mb32">
     Пароль
