fix: исправлена ошибка с querySelector

--- a/libs/posts/src/lib/ui/address-input/address-input.component.html
+++ b/libs/posts/src/lib/ui/address-input/address-input.component.html
@@ -1,7 +1,5 @@
 <tt-input
   [formControl]="innerSearchControl"
-  [ngModel]="profile().city"
-  (ngModelChange)="onModelChange($event)"
   [placeholder]="'Введите город'"
 >
   Город
@@ -21,3 +19,5 @@
     </div>
   }
 }
+<!--  [ngModel]="profile().city"-->
+<!--  (ngModelChange)="onModelChange($event)"-->
